[metadata]
description-file = README.md

[yapf]
based_on_style = pep8
DEDENT_CLOSING_BRACKETS = True
COALESCE_BRACKETS=True
SPLIT_BEFORE_FIRST_ARGUMENT=True

[mypy]
python_version = 3.6
# override flake8-mypy defaults, since we provide (missing) types
ignore_missing_imports=False
disallow_untyped_calls=True
follow_imports=True
cache_dir=.mypy_cache

[tool:pytest]
addopts = -v -x -rs --ignore=setup.py --pep8 --cov-report term-missing --cov=iocage/lib iocage/lib iocage/tests
pep8maxlinelength = 80
pep8ignore = * ALL
[aliases]
test=pytest
